--- a/src/style.css
+++ b/src/style.css
@@ -59,3 +59,9 @@ button {
     border-radius: 5px;
     cursor: pointer;
 }
+
+button:hover {
+    opacity: 0.8;
+    transform: scale(1.06);
+    transition: transform 0.2s ease;
+}
